--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,39 @@
 <!-- FOOTER -->
 <div class="footer_placeholder"></div>
 <footer class="footer">
+    <div class="bot-wrapper">
+        <div class="wrapper bot">
+                <div class="bot-row">
+                    <div class="bot-col-1 bot-item">
+                        <div class="logo-bot"><img src="images/logo-bot.png" alt="logo"></div>
+                    </div>
+                    <div class="bot-col-2 bot-item">
+                        <div class="dostavo4ka" style="float: left">
+                            <a href="#" class="dostavka">Главная</a>
+                            <a href="#" class="dostavka">О компании</a>
+                            <a href="#" class="dostavka">Услуги</a>
+                        </div>
+                        <div class="dostavo4ka">
+                            <a href="#" class="dostavka">Отзывы</a>
+                            <a href="#" class="dostavka">Статьи</a>
+                            <a href="#" class="dostavka">Контакты</a>
+                        </div>
+                    </div>
+                    <div class="bot-col-3 bot-item">
+                        <div class="phone-mail">
+                            <div class="phone-bot"><img src="images/phone.png" alt="phone">+7 (812) 924-85-95</div>
+                            <div class="mail-bot"><img src="images/mail.png" alt="mail">info@avis.group</div>
+                        </div>
+                        <div class="adres-bot"><img src="images/arrow.png" alt="place">192102, г. Санкт-Петербург, ул. Фучика, д.8, оф.315</div>
+                    </div>
+                    <div class="bot-col-4 bot-item">
+                        <div class="voprosu">Остались вопросы?</div>
+                        <div class="perezvonim">Мы Вам перезвоним!</div>
+                        <a href=""><span class="bot-button">Заказать звонок</span></a>
+                    </div>
+                </div>
+        </div>
+    </div>
 
 </footer>
 <!-- FOOTER -->
