--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,39 @@
 <!-- HEADER -->
 <header>
+    <div class="red-row col_1">
+        <div class="red-row-text wrapper">
+            <div class="col_1_2 top-item">
+                <div class="adres"><img src="images/arrow.png" alt="place">192102, г. Санкт-Петербург, ул. Фучика, д.8, оф.315</div>
+            </div>
+            <div class="mail_phone col_1_2 top-item">
+                <div class="mail"><img src="images/mail.png" alt="mail">info@avis.group</div>
+                <div class="phone"><img src="images/phone.png" alt="phone">+7 (812) 924-85-95</div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="menu wrapper">
+        <div class="logo col_1_3 menu-item"><a href=""><img src="images/logo.png" alt="logo"></a></div>
+        <div class="menu-text col_2_3 menu-item">
+            <div><a href="" class="menu-a">Главная</a></div>
+            <div><a href="" class="menu-a">О компании</a></div>
+            <div><a href="" class="menu-a">Услуги</a></div>
+            <div><a href="" class="menu-a">Отзывы</a></div>
+            <div><a href="" class="menu-a">Статьи</a></div>
+            <div><a href="" class="menu-a">Контакты</a></div>
+        </div>
+    </div>
+
+    <div class="picture-place">
+        <div class="picture-text">
+            <div class="picture-text-row1">Средства, вложенные в безопасность –</div>
+            <div class="picture-text-row2">это инвестиции, а не расходы</div>
+        </div>
+    </div>
+
+
+
 
 </header>
 <!-- /HEADER -->
