КАРТУ ТОБІ ПРИКРУТИВ

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -37,11 +37,15 @@
 
 </footer>
 <!-- FOOTER -->
-
+<script type="text/javascript">
+    var cordX= 59.882057;
+    var cordY= 30.376650;
+    var googleText ="г. Санкт-Петербург, ул. Фучика, д.8";
+</script>
 <!-- SCRIPTS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script type="text/javascript" src="js/validate_script.js" ></script>
-
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <!-- build:js -->
 <script type="text/javascript" src="js/plagins/device.js" ></script>
 <script type="text/javascript" src="js/plagins/jquery.fancybox.pack.js" ></script>
