--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -45,7 +45,7 @@
 <!-- SCRIPTS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script type="text/javascript" src="js/validate_script.js" ></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
 <!-- build:js -->
 <script type="text/javascript" src="js/plagins/device.js" ></script>
 <script type="text/javascript" src="js/plagins/jquery.fancybox.pack.js" ></script>
