--- a/src/partials/main-body.html
+++ b/src/partials/main-body.html
@@ -122,25 +122,7 @@
     </div>
 </div>
 
-<div class="clients wrapper">
-    Наши <span>клиенты</span>
-</div>
-
-<div class="logos wrapper">
-    <a href="#"><img src="images/megafon.png" alt="megafon"></a>
-    <a href="#"><img src="images/stockman.png" alt="stockman"></a>
-    <a href="#"><img src="images/timepad.png" alt="timepad"></a>
-    <a href="#"><img src="images/olympus.png" alt="olympus"></a>
-    <a href="#"><img src="images/sberbank.png" alt="sberbank"></a>
-    <a href="#"><img src="images/visa.png" alt="visa"></a>
-</div>
-
-<div class="dots">
-    <a href="#"><div class="dot"></div></a>
-    <a href="#"><div class="dot"></div></a>
-    <a href="#"><div class="dot"></div></a>
-    <a href="#"><div class="dot"></div></a>
-</div>
+//= slider.html
 
 <div class="otziv wrapper">
     <div class="otz-col">
