--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -46,7 +46,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script type="text/javascript" src="js/validate_script.js" ></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js"></script>
-<!-- build:js -->
+<!-- build:js -->f
 <script type="text/javascript" src="js/plagins/device.js" ></script>
 <script type="text/javascript" src="js/plagins/jquery.fancybox.pack.js" ></script>
 <script type="text/javascript" src="js/plagins/jquery.formstyler.min.js" ></script>
