Осталось крапаль доліпити Услуги і взятись за попапи

--- a/src/partials/article-body.html
+++ b/src/partials/article-body.html
@@ -27,7 +27,7 @@
 
 <div class="wrapper">
     <div class="spisok">
-        <div class="spisok-text">Вернуться к списку всех статей</div>
+        <a href=""><div class="spisok-text">Вернуться к списку всех статей</div></a>
 
 
     </div>
