--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -29,7 +29,7 @@
                     <div class="bot-col-4 bot-item">
                         <div class="voprosu">Остались вопросы?</div>
                         <div class="perezvonim">Мы Вам перезвоним!</div>
-                        <a href=""><span class="bot-button">Заказать звонок</span></a>
+                        <a href="#call-popup" class="fancy-shnjaga bot-button"><span>Заказать звонок</span></a>
                     </div>
                 </div>
         </div>
